# NFM-Eval-Harness-delivery

./: .gitignore  DELIVERY_PACKAGE.md  HANDOFF.md  INL_HANDOFF.md  Makefile  PACKAGING_CHECKLIST.md  README.md  RESULTS_MANIFEST.md  USAGE_SCOPE.md  check_vllm_runtime.py  pyproject.toml  run_open_telco_otfull.sh  run_open_telco_otlite.sh  setup-main.sh  setup-post.sh  setup-pre.sh
docs/: 00-overview.md  01-quickstart.md  02-profiles-and-scoring.md  03-gsma-alignment-and-caveats.md  04-final-results.md  05-operations-and-troubleshooting.md  06-inl-handoff.md  07-release-notes.md  08-results-manifest.md  presentation-prompt-ko.md
docs/archive/: README.md  engineering-history-index.md  final-audit-delta.md
open_telco_lm_eval/: README.md
open_telco_lm_eval/tasks/open_telco_otfull/: open_telco_full_3gpp_tsg_gsma.yaml  open_telco_full_3gpp_tsg_lm_eval_baseline.yaml  open_telco_full_oranbench_lm_eval_baseline.yaml  open_telco_full_oranbench_mcgen.yaml  open_telco_full_srsranbench_lm_eval_baseline.yaml  open_telco_full_srsranbench_mcgen.yaml  open_telco_full_telelogs_gsma.yaml  open_telco_full_telelogs_gsma_hinted.yaml  open_telco_full_telelogs_lm_eval_baseline.yaml  open_telco_full_telemath_gsma.yaml  open_telco_full_telemath_lm_eval_baseline.yaml  open_telco_full_teleqna_lm_eval_baseline.yaml  open_telco_full_teleqna_mcgen.yaml  open_telco_full_teletables_mcgen.yaml  (+5 more)
scripts/: aggregate_repeats.py  check_tracked_file_sizes.py  compare_gsma_leaderboard.py  delivery_check.sh  smoke_test.sh
tests/: test_gsma_parsers.py  test_mc_gen.py  test_parsers_characterization.py
(+101 files in other folders)
